hphp/test/zend/bad/ext-spl/bug32394.php
<?php

$object = new ArrayIterator;
$object->append(1);

foreach($object as $key => $value)
{
	$object->offsetUnset($key);
}

?>
===DONE===